# Designs

./: .gitignore  CMakeLists.txt  main  main.cpp
DesignPatternHandler/: DPHandler.cpp  DPHandler.h
headers/AbstractFactory/: Delivery.h  PackageTypes.h  Transportation.h
headers/AbstractFactory/AbstractClasses/: Package.h  Vehicle.h
headers/Observatory/: Observer.h  Subject.h
headers/Observatory/AbstractClasses/: IObserver.h  ISubject.h
headers/Singleton/: Singleton.h
headers/Strategy/: Strategies.h  StringStrategy.h
menu/: menu.cpp  menu.h  utility.h
sources/AbstractFactory/: Delivery.cpp  Package.cpp  Transportation.cpp
sources/Observatory/: Observer.cpp  Subject.cpp
sources/Singleton/: Singleton.cpp
sources/Strategy/: Strategies.cpp  StringStrategy.cpp
